@@ -1,6 +1,7 @@
 ==============
 Version 1.0.6:
 - Fix and add x.lab.size and y.lab.size parameters in plot.Epoch method
+- add linewidth parameter in plot.Epoch method
 
 
 ==============
